--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev:staging": "tsx --watch --env-file .env.staging server.ts",
     "dev:prod": "tsx --watch --env-file .env.production server.ts",
     "start": "node --env-file .env.production dist/server.js",
-    "build": "tsc",
+    "build": "tsc && tsc-alias",
     "type-check": "tsc --noEmit",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
@@ -42,6 +42,7 @@
     "@tsconfig/node22": "^22.0.2",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
+    "@types/eslint": "^9.6.1",
     "@types/express": "^5.0.3",
     "@types/express-xss-sanitizer": "^2.0.0",
     "@types/morgan": "^1.9.10",
@@ -51,8 +52,10 @@
     "eslint": "^9.38.0",
     "eslint-plugin-perfectionist": "^4.15.1",
     "husky": "^9.1.7",
+    "jiti": "^2.6.1",
     "lint-staged": "^16.2.4",
     "prettier": "^3.6.2",
+    "tsc-alias": "^1.8.16",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.1",
