--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
       "@routes/*": ["./src/routes/*"]
     }
   },
-  "include": ["**/*.ts"],
+  "include": ["**/*.ts", "eslint.config.ts"],
   "exclude": ["dist"]
 }
